--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="180dp"
         android:background="@color/purple_700"
         android:id="@+id/mainLinearLayout"
         android:gravity="center_horizontal"
@@ -19,31 +19,90 @@
             android:layout_height="wrap_content"
             android:id="@+id/main_hello"
             android:text="@string/hello_world"
+            android:layout_weight="1.0"
             android:layout_marginTop="10sp"
             />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/mian_hello_px"
             android:text="hello world 30 px"
             android:textSize="30px"
-            android:layout_marginTop="10sp"
-            />
+            android:layout_marginTop="10sp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/mian_hello_dp"
-            android:text="hello world 30 dp"
+            android:text="30 dp go second page"
             android:textSize="30dp"
-            android:layout_marginTop="10sp"
-            />
-
+            android:layout_marginTop="10sp"/>
         <TextView
             android:id="@+id/mian_hello_sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="hello world 30 sp"
+            android:text="30 sp go unit3 page"
             android:layout_marginTop="10sp"
             android:textSize="30sp" />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:background="#00aaff"
+        android:id="@+id/mainLinearLayout2"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/mainLinearLayout">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="20dp"
+            android:background="#ffff99"
+            android:padding="30dp">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#ff0000" />
+        </LinearLayout>
+    </LinearLayout>
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:columnCount="2"
+        android:rowCount="2"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/mainLinearLayout2"
+        android:id="@+id/go_activity">
+        <Button
+            android:layout_width="180dp"
+            android:layout_height="60dp"
+            android:id="@+id/go_button"
+            android:gravity="center"
+            android:textAllCaps="false"
+            android:text="go Button" />
+
+        <Button
+            android:layout_width="180dp"
+            android:layout_height="60dp"
+            android:background="#ffaa00"
+            android:gravity="center"
+            android:text="橙色" />
+
+        <Button
+            android:layout_width="180dp"
+            android:layout_height="60dp"
+            android:background="#00ff00"
+            android:gravity="center"
+            android:text="绿色" />
+
+        <Button
+            android:layout_width="180dp"
+            android:layout_height="60dp"
+            android:background="#660066"
+            android:gravity="center"
+            android:text="深紫色" />
+
+    </GridLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
