--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -5,17 +5,264 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Unit3.CalculatorActivity">
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/calculator_ll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#eeeeee"
         android:orientation="vertical">
+
         <TextView
+            android:id="@+id/simple_calculator_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/simple_calculator_text"
-            android:text="@string/app_name"
-            />
+            android:gravity="center"
+            android:text="@string/simple_calculator" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#ffffff"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/cal_result"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right|bottom"
+                android:lines="3"
+                android:maxLines="3"
+                android:scrollbars="vertical"
+                android:text="0"
+                android:textColor="#000000"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="4"
+            android:gravity="center"
+            android:padding="10dp">
+
+            <Button
+                android:id="@+id/btn_cancle"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="CE"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+
+            <Button
+                android:id="@+id/btn_divide"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="÷"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+
+            <Button
+                android:id="@+id/btn_multiply"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="×"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+
+            <Button
+                android:id="@+id/btn_clear"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="C"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+
+            <Button
+                android:id="@+id/btn_seven"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="7"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+
+            <Button
+                android:id="@+id/btn_eight"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="8"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+
+            <Button
+                android:id="@+id/btn_nine"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="9"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+
+            <Button
+                android:id="@+id/btn_plus"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="+"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+
+            <Button
+                android:id="@+id/btn_four"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="4"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+
+            <Button
+                android:id="@+id/btn_five"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="5"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+
+            <Button
+                android:id="@+id/btn_six"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="6"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+
+            <Button
+                android:id="@+id/btn_minus"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="-"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+
+            <Button
+                android:id="@+id/btn_one"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="1"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+
+            <Button
+                android:id="@+id/btn_two"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="2"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+
+            <Button
+                android:id="@+id/btn_three"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="3"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+
+            <ImageButton
+                android:id="@+id/ib_sqrt"
+                android:layout_width="90dp"
+                android:layout_height="75dp"
+                android:layout_margin="5dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/sqrt" />
+
+            <Button
+                android:id="@+id/btn_reciprocal"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="1/x"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+
+            <Button
+                android:id="@+id/btn_zero"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="0"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+
+            <Button
+                android:id="@+id/btn_dot"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="."
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+
+            <Button
+                android:id="@+id/btn_equal"
+                android:layout_margin="5dp"
+                android:width="90dp"
+                android:height="75dp"
+                android:gravity="center"
+                android:text="=="
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:backgroundTint="#009688" />
+        </GridLayout>
 
     </LinearLayout>
 
