--- a/app/src/main/res/layout/activity_button.xml
+++ b/app/src/main/res/layout/activity_button.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Unit3.ButtonActivity">
+    tools:context=".chapter03.ButtonActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
