--- a/app/src/main/res/layout/activity_chapter04_action_uri.xml
+++ b/app/src/main/res/layout/activity_chapter04_action_uri.xml
@@ -4,22 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".chapter04.ActLifeActivity">
+    tools:context=".chapter04.Chapter04ActionUriActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/act_life_ll"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
-        >
-        <TextView
+        android:id="@+id/chapter04_action_ll"
+        android:orientation="vertical">
+        <Button
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:id="@+id/act_status"
-            android:gravity="center"
-            android:textColor="@android:color/black"
-            android:text="Activity Status"/>
-
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_chapter04_dial"
+            android:text="拨号"
+            android:gravity="center"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
