--- a/app/src/main/res/layout/activity_chapter04_act_start.xml
+++ b/app/src/main/res/layout/activity_chapter04_act_start.xml
@@ -4,22 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".chapter04.Chapter04ActLifeActivity">
+    tools:context=".chapter04.Chapter04ActStartActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/act_life_ll"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
-        >
+        android:orientation="vertical">
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:id="@+id/act_status"
-            android:gravity="center"
-            android:textColor="@android:color/black"
-            android:text="Activity Status"/>
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/chapter04_act_start"
+            android:layout_gravity="center"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
