--- a/app/src/main/res/layout/activity_chapter04_main.xml
+++ b/app/src/main/res/layout/activity_chapter04_main.xml
@@ -48,8 +48,8 @@
             android:gravity="center"
             android:textAllCaps="false"
             android:layout_margin="10dp"
-            android:text="chapter04 ActLife"
-            android:id="@+id/go_chapter04_ActJump2"/>
+            android:text="chapter04 ActMetadata"
+            android:id="@+id/go_chapter04_ActMetadata"/>
         <Button
             android:layout_width="180dp"
             android:layout_height="100dp"
